--- a/related_projects.html
+++ b/related_projects.html
@@ -7,7 +7,7 @@ permalink: /related-projects/
 <div class="">
   <div class="row">
     <div class="col-sm-3  text-white"><img alt="..." width="100%" src="/ngs-academy/img/dukenuslogo.png"/></div> <!-- Blue background with white text -->
-    <div class="col-sm-9">Asia PGI was established in late 2021, with the support of the Bill & Melinda Gates Foundation, to leverage scientific and technical partnerships in Singapore and across Asia. Our aim is to accelerate the application of pathogen genomic sequencing for early disease detection in Asia through four key objectives – Partnerships, Capacity Development, Enabling Environment and Monitoring & Research.<br> <a href="https://www.duke-nus.edu.sg/asiapgi/about/about-apgi" target="_blank">Read more</a>read more</div> <!-- Green background with white text -->
+    <div class="col-sm-9">Asia PGI was established in late 2021, with the support of the Bill & Melinda Gates Foundation, to leverage scientific and technical partnerships in Singapore and across Asia. Our aim is to accelerate the application of pathogen genomic sequencing for early disease detection in Asia through four key objectives – Partnerships, Capacity Development, Enabling Environment and Monitoring & Research.<br> <a href="https://www.duke-nus.edu.sg/asiapgi/about/about-apgi" target="_blank">Read more</a></div> <!-- Green background with white text -->
 
   </div>
 </div>
