--- a/trainer_community.html
+++ b/trainer_community.html
@@ -15,7 +15,7 @@ permalink: /trainer-communities/
 }  
 
 .accordion_text_title {
-  color: white !important
+  color: white !important;
 }
 </style>
   <!--New collapsible -->
